# bs1770gain

./: AUTHORS  Makefile.am  Makefile.in  README.md  README_SANITIZED  config.h  config.h.in  configure  configure.ac  configure.ac.X  configure.template
autom4te.cache/: output.0  traces.1
bs1770gain/: Makefile.am  Makefile.in  bs1770gain.c  bs1770gain.h  bs1770gain_aggregate.c  bs1770gain_album.c  bs1770gain_audiostream.c  bs1770gain_basename.c  bs1770gain_convert.c  bs1770gain_copy_file.c  bs1770gain_csv2avdict.c  bs1770gain_dynload.c  bs1770gain_dynload.h  bs1770gain_find_decoder.c  bs1770gain_oor.c  bs1770gain_opath.c  bs1770gain_parse_time.c  bs1770gain_path3.c  bs1770gain_print_classic.c  bs1770gain_print_xml.c  bs1770gain_priv.h  bs1770gain_read.c  bs1770gain_s2w.c  bs1770gain_same_file.c  bs1770gain_seek.c  bs1770gain_sink.c  bs1770gain_sox.c  bs1770gain_stats.c  bs1770gain_stream.c  bs1770gain_strtok.c  bs1770gain_transcode.c  bs1770gain_tree.c  version.mak
bs1770gain/doc/: index.html.01  index.html.02  index.html.03
examples/: ffmpeg1770.c  sndfile1770.c  version.mak
lib1770-2/: Makefile.in  configure  lib1770.h  lib1770_biquad.c  lib1770_block.c  lib1770_pre.c  lib1770_stats.c  version.mak
libbg/: Makefile.am  Makefile.in  bg.h  bg_album.c  bg_analyzer.c  bg_annotator.c  bg_basename.c  bg_basenamea.c  bg_char_nexta.c  bg_file.c  bg_muxer.c  bg_param.c  bg_param_threads.c  bg_parse_time.c  bg_pathnorm.c  bg_pilot.c  bg_pilot.h  bg_pilot_branch.c  bg_pilot_leaf.c  bg_print_classic.c  bg_print_conf.c  bg_print_csv.c  bg_print_xml.c  bg_process.c  bg_root.c  bg_sync.c  bg_threads_helper.c  bg_track.c  bg_track_target.c  bg_tree.c  bg_tree_path.c  bg_tree_patha.c  bg_utf8_iter.c  bg_version.c  bg_wcs2str.c  bgx.c
libff/: Makefile.in  ff.h  ff_analyzer.c  ff_audio.c  ff_csv2avdict.c  ff_dynload.c  ff_fcmp.c  ff_fexists.c  ff_fifo.c  ff_filter.c  ff_inout.c  ff_iter.c  ff_mkdir.c  ff_muxer.c  ff_mv.c  ff_printer.c  ff_resampler.c  ff_rm.c  ff_wcs2str.c
libffsox-2/: Makefile.in  configure  ffsox.c  ffsox.h  ffsox_aggregate.c  ffsox_analyze.c  ffsox_audio_player.c  ffsox_audiostream.c  ffsox_av_time_base_q.c  ffsox_basename.c  ffsox_collect.c  ffsox_convert.c  ffsox_csv2avdict.c  ffsox_dynload.c  ffsox_dynload.h  ffsox_dynload2.c  ffsox_dynload_trace.c  ffsox_engine.c  ffsox_filter.c  ffsox_find_decoder.c  ffsox_frame.c  ffsox_frame_consumer.c  ffsox_frame_convert.c  ffsox_frame_convert_sox.c  ffsox_frame_reader.c  ffsox_frame_writer.c  ffsox_list.c  ffsox_machine.c  ffsox_msvcrt.c  ffsox_node.c  ffsox_packet_consumer.c  ffsox_packet_consumer_list.c  ffsox_packet_writer.c  ffsox_path3.c  ffsox_priv.h  ffsox_read.c  ffsox_read_copy.c  ffsox_read_decode.c  ffsox_read_list.c  ffsox_sink.c  (+20 more)
libpbutil/: Makefile.in  homegrown.configure  pbu_basename.c  pbu_copy_file.c  pbu_ext.c  pbu_extend_path.c  pbu_list.c  pbu_malloc.c  pbu_mkdir.c  pbu_msvcrt.c  pbu_s2w.c  pbu_same_file.c  pbu_strtok.c  pbu_trace.c  pbu_vwritelna.c  pbu_vwritelnw.c  pbu_w2s.c  pbu_wcstok.c  pbutil.h  pbutil.h.X  pbutil_priv.h  version.mak
